# grpc_server

./: .env  Cargo.toml  build.rs  read
proto/: blog.proto
src/: data.json  main.rs
src/blog/: blog_app.rs  blog_model.rs  blog_response.rs  blog_route.rs  mod.rs
src/grpc_blog/: grpc_blog_app.rs  grpc_blog_model.rs  grpc_blog_route.rs  mod.rs
