[package]
name = "grpc_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["default", "ws"] }
dotenv = "0.15.0"
filepath = "0.1.2"
prost = "0.12.1"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full", "macros", "rt-multi-thread"] }
tonic = "0.10.2"
tower-http = { version = "0.4.1", features = ["trace", "cors"] }

[build-dependencies]
tonic-build = "0.10.2"
